// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddGroupsForm > render > should render self, children with base props 1`] = `
<Dialog
  buttons={
    {
      "primary": {
        "name": "Confirm",
        "onClick": [Function],
      },
      "secondary": {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  className="_dialog_8290ec"
  headerClass="add_contact_groups"
  title="Add to group"
>
  <TypeList
    __className=""
    initialType={
      {
        "component": [Function],
        "description": "Add the contact to a group",
        "form": [Function],
        "name": "Add to group",
        "type": "add_contact_groups",
      }
    }
    nodeSettings={
      {
        "originalAction": {
          "groups": [
            {
              "name": "Customers",
              "uuid": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
            },
            {
              "name": "Unsatisfied Customers",
              "uuid": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
            },
            {
              "name": "Early Adopters",
              "uuid": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
            },
            {
              "name": "Testers",
              "uuid": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
            },
            {
              "name": "Subscribers",
              "uuid": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
            },
            {
              "name": "Champions",
              "uuid": "e0cccbcf-49be-4eef-88a7-ce2150a6d902",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
        "originalNode": {
          "inboundConnections": {},
          "node": {
            "actions": [
              {
                "groups": [
                  {
                    "name": "Customers",
                    "uuid": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
                  },
                  {
                    "name": "Unsatisfied Customers",
                    "uuid": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
                  },
                  {
                    "name": "Early Adopters",
                    "uuid": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
                  },
                  {
                    "name": "Testers",
                    "uuid": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
                  },
                  {
                    "name": "Subscribers",
                    "uuid": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
                  },
                  {
                    "name": "Champions",
                    "uuid": "e0cccbcf-49be-4eef-88a7-ce2150a6d902",
                  },
                ],
                "type": "add_contact_groups",
                "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
              },
            ],
            "exits": [
              {
                "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
              },
            ],
            "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          },
          "ui": {
            "position": {
              "left": 0,
              "top": 0,
            },
            "type": "execute_actions",
          },
        },
      }
    }
    onChange={[MockFunction spy]}
  />
  <AssetSelector
    createAssetFromInput={[Function]}
    createPrefix="Create group: "
    entry={
      {
        "value": [
          {
            "name": "Customers",
            "uuid": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
          },
          {
            "name": "Unsatisfied Customers",
            "uuid": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
          },
          {
            "name": "Early Adopters",
            "uuid": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
          },
          {
            "name": "Testers",
            "uuid": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
          },
          {
            "name": "Subscribers",
            "uuid": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
          },
          {
            "name": "Champions",
            "uuid": "e0cccbcf-49be-4eef-88a7-ce2150a6d902",
          },
        ],
      }
    }
    expressions={true}
    multi={true}
    name="Select the groups to add the contact to"
    noOptionsMessage="Enter a name to create a new group"
    onAssetCreated={[Function]}
    onChange={[Function]}
    placeholder="Select groups"
    searchable={true}
    shouldExclude={[Function]}
    showLabel={true}
  />
</Dialog>
`;

exports[`AddGroupsForm > render > should render with name_match groups > name_match 1`] = `
<Dialog
  buttons={
    {
      "primary": {
        "name": "Confirm",
        "onClick": [Function],
      },
      "secondary": {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  className="_dialog_8290ec"
  headerClass="add_contact_groups"
  title="Add to group"
>
  <TypeList
    __className=""
    initialType={
      {
        "component": [Function],
        "description": "Add the contact to a group",
        "form": [Function],
        "name": "Add to group",
        "type": "add_contact_groups",
      }
    }
    nodeSettings={
      {
        "originalAction": {
          "groups": [
            {
              "id": "489763",
              "name": "Subscriber",
              "name_match": "Name Match",
              "type": "group",
              "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        },
      }
    }
    onChange={[MockFunction spy]}
  />
  <AssetSelector
    createAssetFromInput={[Function]}
    createPrefix="Create group: "
    entry={
      {
        "value": [
          {
            "expression": true,
            "name": "Name Match",
          },
        ],
      }
    }
    expressions={true}
    multi={true}
    name="Select the groups to add the contact to"
    noOptionsMessage="Enter a name to create a new group"
    onAssetCreated={[Function]}
    onChange={[Function]}
    placeholder="Select groups"
    searchable={true}
    shouldExclude={[Function]}
    showLabel={true}
  />
</Dialog>
`;

exports[`AddGroupsForm > should cancel 1`] = `
[MockFunction spy] {
  "calls": [
    [
      true,
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`AddGroupsForm > updates > should allow creating a new group > add new group 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "groups": [
          {
            "name": "Customers",
            "uuid": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
          },
          {
            "name": "Unsatisfied Customers",
            "uuid": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
          },
          {
            "name": "Early Adopters",
            "uuid": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
          },
          {
            "name": "Testers",
            "uuid": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
          },
          {
            "name": "Subscribers",
            "uuid": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
          },
          {
            "name": "Champions",
            "uuid": "e0cccbcf-49be-4eef-88a7-ce2150a6d902",
          },
          {
            "id": "489763",
            "name": "Subscriber",
            "type": "group",
            "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
          },
        ],
        "type": "add_contact_groups",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`AddGroupsForm > updates > should allow creating a new group > create group 1`] = `
{
  "groups": {
    "validationFailures": [],
    "value": [
      {
        "name": "Customers",
        "uuid": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
      },
      {
        "name": "Unsatisfied Customers",
        "uuid": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
      },
      {
        "name": "Early Adopters",
        "uuid": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
      },
      {
        "name": "Testers",
        "uuid": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
      },
      {
        "name": "Subscribers",
        "uuid": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
      },
      {
        "name": "Champions",
        "uuid": "e0cccbcf-49be-4eef-88a7-ce2150a6d902",
      },
      {
        "id": "489763",
        "name": "Subscriber",
        "type": "group",
        "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
      },
    ],
  },
  "valid": true,
}
`;

exports[`AddGroupsForm > updates > should allow creating a new group 1`] = `
{
  "name": "New Group",
}
`;

exports[`AddGroupsForm > updates > should allow inserting an expresison based group > add expression group 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "groups": [
          {
            "name_match": "Expression Group",
          },
        ],
        "type": "add_contact_groups",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`AddGroupsForm > updates > should allow inserting an expresison based group > expression group 1`] = `
{
  "groups": {
    "validationFailures": [],
    "value": [
      {
        "expression": true,
        "name": "Expression Group",
        "name_match": "Expression Group name match",
      },
    ],
  },
  "valid": true,
}
`;

exports[`AddGroupsForm > updates > should allow switching from router > switch from router 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "groups": [
          {
            "id": "489763",
            "name": "Subscriber",
            "type": "group",
            "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
          },
        ],
        "type": "add_contact_groups",
        "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`AddGroupsForm > updates > should handle updates and save > update 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "groups": [
          {
            "id": "489763",
            "name": "Subscriber",
            "type": "group",
            "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
          },
        ],
        "type": "add_contact_groups",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
